2021-09-10 1.4.18:
------------------
  * Merge in various patches used by conda-standalone (#85)

    - Do not assume menuinst wants to operate on `sys.prefix`
    - Do not use `runAsAdmin` when the user is not an admin
    - Allow menuinst to operate on non-base prefix
    - Update various tests

2021-07-14 1.4.17:
------------------
  * Use distribution name as part of the Start Menu item (#77)
  * Transfer repository to `conda` GitHub organization (#81)
  * Switch from AppVeyor to GitHub Actions for CI (#78, #82, #83)

2019-03-13 1.4.16:
------------------
  * Command line option starting with minux, or a space shall not be quoted

2019-03-13: 1.4.15:
-------------------
  * tagged in gonzalo_refactor branch

2018-05-29 1.4.14:
------------------
  * clean up and restructure elevation logic
  * unquote HOMEPATH env var as default target location

2018-05-23 1.4.13:
------------------
  * Change HOME to HOMEPATH for default shortcut start path

2018-05-10 1.4.12:
-----------------
  * set default workdir to %HOME% so that it is dynamic per-user
  * fix recursion infinite loop with background processes that had insufficient permissions

2018-02-06 1.4.11:
-----------------
  * fix #60 more cmd.exe-specific hacking (#61)
  * fix #54 incorrect locale handling (#62)
  * fix logging traceback from #54 (#63)


2017-10-17 1.4.10:
-----------------
  * better fix for shortcut handling and tidy-ups


2017-10-17 1.4.9:
-----------------
  * fix cmd.exe / %ComSpec% system shortcut quoting


2017-09-16 1.4.8:
-----------------
  * fix non-root pythons being used to call cwp.py  #47


2017-05-19: 1.4.7:
------------------
  * Fixes for Python 2 Unicode conversion in win32.py


2017-05-17: 1.4.6:
------------------
  * Fix cwp.py after changes to menuinst.knownfolders


2017-05-13: 1.4.5:
------------------
  * Also use OutputDebugStringW for logging for pythonw.exe


2017-01-23: 1.4.4:
------------------
  * Set CONDA_PREFIX environment variable in cwp.py, fix PATH

