@@ -8,7 +8,6 @@ jobs:
     runs-on: ${{ matrix.os }}-latest
     timeout-minutes: 30
     env:
-      dependencies: pywin32
       test-dependencies: pytest pytest-cov conda
     strategy:
       fail-fast: false
